# beibei-monitor-Java

./: README.md  docker-compose.yml
automatedDeployment/: Dockerfile  docker-compose.yml
automatedDeployment/mysql/: Dockerfile  monitor.sql
automatedDeployment/nginx/: Dockerfile
automatedDeployment/nginx/configs/: default.conf  nginx.conf
beibei-monitor-client/: .gitignore  Cargo.toml  pom.xml
beibei-monitor-client/src/: main.rs
beibei-monitor-client/src/arch/: arch.rs  mod.rs  runtime_detail.rs
beibei-monitor-client/src/logger/: logger.rs
beibei-monitor-client/src/net/: mod.rs  net.rs
beibei-monitor-server/: Dockerfile  pom.xml
beibei-monitor-server/src/main/resources/: application-dev.yml  application-prod.yml
beibei-monitor-web-final/: Dockerfile  package-lock.json  package.json  vite.config.js
beibei-monitor-web-final/src/: main.js
beibei-monitor-web-final/src/component/: ClientDetails.vue  DevTaskCard.vue  EventStream.vue  OverviewCard.vue  PreviewCard.vue  RegisterCard.vue  RuntimeHistory.vue  SSHDetailCard.vue  TaskCard.vue  Terminal.vue  TerminalWindow.vue  WarnCard.vue
beibei-monitor-web-final/src/net/: index.js
beibei-monitor-web-final/src/router/: index.js
beibei-monitor-web-final/src/views/: IndexView.vue  WelcomeView.vue
beibei-monitor-web-final/src/views/main/: ChildManage.vue  DevArrangement.vue  DevTask.vue  EarlyWarningManage.vue  Manage.vue  Overview.vue  SSHManage.vue  Security.vue  TaskAssignment.vue
beibei-monitor-web/src/component/: CreateSubAccount.vue
config/: server.json
(+72 files in other folders)
