[package]
name = "beibei-monitor-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.21"
fern = "0.6.2"
chrono = "0.4.35"
lazy_static = "1.4.0"
once_cell = "1.19.0"
